# nexis-benchmark

./: .gitattributes  .gitignore  ENHANCEMENTS.md  Local Model Benchmark GUI.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: gen-social.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  bench.rs  commands.rs  domain.rs  gguf.rs  lib.rs  llama.rs  main.rs  nexis.rs  onnx.rs  scan.rs  simulate.rs  state.rs
src/app/: App.tsx
src/components/: BrandMark.tsx  Heptagram.tsx  WindowControls.tsx  icons.ts
src/components/ui/: button.tsx  card.tsx  sonner.tsx  tooltip.tsx
src/lib/: api.ts  backendMeta.ts  mockEngine.ts  platform.ts  stats.ts  types.ts  utils.ts
src/modules/backends/: BackendSelector.tsx
src/modules/config/: ConfigPanel.tsx
src/modules/header/: Header.tsx
src/modules/results/: ComparisonChart.tsx  HistoryMenu.tsx  ResultsDashboard.tsx  RunMatrix.tsx  metrics.ts
src/modules/results/viz/: DistributionStrip.tsx  SummaryStrip.tsx  TradeoffScatter.tsx
src/modules/run/: RunBar.tsx
src/modules/theme/: ThemeProvider.tsx
src/modules/window/: useFileDrop.ts  useShortcuts.ts
src/store/: useBenchStore.ts
src/styles/: fonts.css  globals.css
