[package]
name = "nexis-benchmark"
version = "0.1.0"
description = "Benchmark local AI models across backends."
authors = ["Ryan Wetzstein"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "nexis_benchmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# ONNX Runtime via the ort crate. download-binaries (a default feature) fetches
# prebuilt ORT at build time — no cmake/vendor toolchain required.
ort = "2.0.0-rc.12"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
